--- a/CIT-APP/app/src/main/res/layout/activity_exercises.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_exercises.xml
@@ -4,25 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Exercises">
 
-    <Button
-        android:id="@+id/trainingset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trainingset"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="120dp"
+        android:layout_height="46dp"
+        android:text="EXERCISES"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/main"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/exercises"
+        android:id="@+id/main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="exercises"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Back to main"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trainingset" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
