--- a/CIT-APP/app/src/main/res/layout/activity_exercises.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_exercises.xml
@@ -8,18 +8,27 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="120dp"
-        android:layout_height="46dp"
-        android:text="EXERCISES"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/main"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="413dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="8dp"
 
-    <Button
-        android:id="@+id/main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back to main"
+        android:layout_marginLeft="8dp"
+        android:gravity="center"
+        android:text="EXERCISES"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.422"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/element_list"
+        android:layout_width="409dp"
+        android:layout_height="609dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
