--- a/CIT-APP/app/src/main/res/layout/activity_trainingset.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_trainingset.xml
@@ -13,7 +13,7 @@
         android:text="Trainingset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="79dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/main"
