--- a/CIT-APP/app/src/main/res/layout/activity_instruction.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_instruction.xml
@@ -16,10 +16,10 @@
 
     <TextView
         android:id="@+id/exerciseTitle"
-        android:layout_width="324dp"
+        android:layout_width="323dp"
         android:layout_height="52dp"
         android:text="TITLE"
-        android:textSize="20sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_width="323dp"
         android:layout_height="54dp"
         android:text="Description"
-        android:textSize="15sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
@@ -40,7 +40,23 @@
         android:layout_width="323dp"
         android:layout_height="239dp"
         android:text="Instruction"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exerciseDescription" />
+
+    <Button
+        android:id="@+id/startExercise"
+        android:layout_width="330dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="startExercise"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exerciseInstruction" />
 </androidx.constraintlayout.widget.ConstraintLayout>
