--- a/CIT-APP/app/src/main/res/layout/activity_exercises.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_exercises.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="8dp"
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
-        android:text="EXERCISES"
+        android:text="@string/Exercises"
         android:textColor="#ffffff"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
