--- a/CIT-APP/app/src/main/res/layout/activity_main.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,22 @@
         android:id="@+id/trainingset"
         android:layout_width="157dp"
         android:layout_height="58dp"
+        android:layout_marginTop="100dp"
         android:background="@color/colorPrimaryDark"
-        android:text="Trainingset"
+        android:text="@string/Training_Set"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/exercises"
         android:layout_width="157dp"
         android:layout_height="58dp"
+        android:layout_marginTop="100dp"
         android:background="@color/colorPrimaryDark"
-        android:text="exercises"
+        android:text="@string/Exercises"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trainingset" />
@@ -35,11 +35,23 @@
         android:layout_width="412dp"
         android:layout_height="97dp"
         android:background="@color/colorPrimaryDark"
+        android:gravity="center"
+        android:text="@string/app_name"
         android:textColor="#ffffff"
         android:textSize="50sp"
-        android:text="CIT-APP"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="157dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="100dp"
+        android:text="@string/Settings"
+        android:textColor="#ffffff"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exercises" />
 </androidx.constraintlayout.widget.ConstraintLayout>
