Added Syllable repetition task with timer voice recording needed

--- a/CIT-APP/app/src/main/res/layout/activity_minimal_pairs2.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_minimal_pairs2.xml
@@ -34,6 +34,7 @@
         android:layout_width="409dp"
         android:layout_height="49dp"
         android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <Button
@@ -52,8 +53,9 @@
         android:layout_height="49dp"
         android:layout_marginTop="125dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <Button
             android:id="@+id/midLeft"
@@ -70,8 +72,9 @@
         android:layout_width="409dp"
         android:layout_height="49dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <Button
             android:id="@+id/midRight"
@@ -90,8 +93,9 @@
         android:layout_width="409dp"
         android:layout_height="49dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <Button
             android:id="@+id/leftLeft"
