[add] Added recording of voice and Speech output with testfile for now

--- a/CIT-APP/app/src/main/res/layout/activity_picture__description.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_picture__description.xml
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/cookie" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/recordPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
