[mod] changed minimal pairs 1 + 2 and word list and made every activity portrait only

--- a/CIT-APP/app/src/main/res/layout/activity_main.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,6 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="412dp"
         android:layout_height="97dp"
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
@@ -41,7 +40,8 @@
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent" />
 
     <Button
         android:id="@+id/settings"
