--- a/CIT-APP/app/src/main/res/layout-land/exercise_element.xml
+++ b/CIT-APP/app/src/main/res/layout-land/exercise_element.xml
@@ -9,21 +9,23 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="90dp"
-        android:layout_height="50dp"
+        android:layout_height="47dp"
         android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toStartOf="@+id/exerciseName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/exerciseName"
-        android:layout_width="321dp"
-        android:layout_height="49dp"
+        android:layout_width="590dp"
+        android:layout_height="47dp"
         android:layout_marginTop="32dp"
         android:background="@color/colorPrimaryDark"
-        android:textColor="#ffffff"
         android:text="TextView"
+        android:textColor="#ffffff"
         android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
