--- a/CIT-APP/app/src/main/res/layout/activity_instruction.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_instruction.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/exerciseTitle"
-        android:layout_width="323dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
         android:text="TITLE"
         android:textSize="40sp"
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/exerciseDescription"
-        android:layout_width="323dp"
+        android:layout_width="match_parent"
         android:layout_height="54dp"
         android:text="Description"
         android:textSize="20sp"
@@ -37,7 +37,7 @@
 
     <TextView
         android:id="@+id/exerciseInstruction"
-        android:layout_width="323dp"
+        android:layout_width="match_parent"
         android:layout_height="239dp"
         android:text="Instruction"
         android:textSize="30sp"
