--- a/CIT-APP/app/src/main/res/layout/activity_picture__description.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_picture__description.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="683dp"
+        android:layout_height="295dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
