--- a/CIT-APP/app/src/main/res/layout/activity_settings.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,6 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="418dp"
         android:layout_height="71dp"
         android:text="@string/Settings"
         android:gravity="center"
@@ -17,6 +16,7 @@
         android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
