--- a/CIT-APP/app/src/main/res/layout/activity_instruction.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_instruction.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".other_activities.Instruction">
 
     <FrameLayout
@@ -43,7 +44,7 @@
     <TextView
         android:id="@+id/exerciseInstruction"
         android:layout_width="match_parent"
-        android:layout_height="239dp"
+        android:layout_height="wrap_content"
         android:text="Instruction"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,15 +53,14 @@
 
     <Button
         android:id="@+id/startExercise"
-        android:layout_width="330dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginBottom="32dp"
-        android:background="#FFFF8C00"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_border"
         android:text="@string/startExercise"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseInstruction" />
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
