--- a/CIT-APP/app/src/main/res/layout/activity_minimal_pairs_exercise_finished.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_minimal_pairs_exercise_finished.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".other_activities.MinimalPairsExerciseFinished">
 
     <Button
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="50dp"
-        android:background="#FFFF8C00"
+        android:background="@drawable/button_border"
         android:text="@string/Again"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +25,7 @@
         android:layout_width="190dp"
         android:layout_height="118dp"
         android:layout_marginTop="100dp"
-        android:background="#FFFF8C00"
+        android:background="@drawable/button_border"
         android:text="@string/Done"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,19 +38,20 @@
         style="@style/Widget.AppCompat.RatingBar"
         android:layout_width="240dp"
         android:layout_height="51dp"
+        android:background="@drawable/rating_bar_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/score"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="53dp"
         android:layout_marginTop="80dp"
         android:gravity="center"
         android:text="10 / 10 \n "
         android:textColor="#330000"
-        android:textSize="30sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/minimalPairsPercentage" />
@@ -62,7 +64,7 @@
         android:gravity="center"
         android:text="@string/Motivation"
         android:textColor="#330000"
-        android:textSize="30sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score" />
