--- a/CIT-APP/app/src/main/res/layout/activity_results_per_year.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_results_per_year.xml
@@ -4,10 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".other_activities.EvaluationOverTime">
+    tools:context=".EvaluationOverTime">
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/evaluation_over_time"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
