--- a/CIT-APP/app/src/main/res/layout/activity_trainingset.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_trainingset.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".other_activities.Trainingset">
 
     <TextView
         android:id="@+id/trainingsetTitle"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#FFFF8C00"
         android:gravity="center"
         android:text="@string/trainingsetTitle"
         android:textColor="#000000"
