--- a/CIT-APP/app/src/main/res/layout/exercise_element.xml
+++ b/CIT-APP/app/src/main/res/layout/exercise_element.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:background="#FFFF8C00"
+        android:background="@drawable/button_border"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="20sp"
