--- a/CIT-APP/app/src/main/res/values/colors.xml
+++ b/CIT-APP/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FFFF8C00</color>
+    <color name="colorPrimaryDark">#FFFF8C00</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="color1">#ffe375</color>
+    <color name="color2">#b0370e</color>
+    <color name="color3">#8c6ac8</color>
+    <color name="color4">#0084f9</color>
 </resources>
